objects/Setup_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Encryption_Key__c</fullName>
        <label>Encryption Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fixed_Description__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fixed Description</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Namespace_Api__c</fullName>
        <label>Namespace Api</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Setup Settings</label>
</CustomObject>